feat(03-final): use Eleventy Universal Filter instead
This was suggested in a comment on my blog post!

Using a data file to make `@11ty/eleventy-img` seemed hacky, so this is much
more pleasing.

I'm still hopeful that it would be possible to require `@11ty/eleventy-img`
directly in the `_includes/webc/img.webc` file instead, to keep all image
related concerns there.

--- a/03-final/_includes/webc/img.webc
+++ b/03-final/_includes/webc/img.webc
@@ -1,20 +1,1 @@
-<script webc:type="render" webc:is="template">
-async function() {
-  let metadata = await this.Image(this.src, {
-    widths: [300],
-    formats: ["avif", "jpeg"],
-    outputDir: "_site/img/",
-  });
-
-  let imageAttributes = {
-    alt: this.alt,
-    sizes: '100vw',
-    loading: "lazy",
-    decoding: "async",
-    "webc:raw": true,
-  };
-
-  // You bet we throw an error on missing alt in `imageAttributes` (alt="" works okay)
-  return this.Image.generateHTML(metadata, imageAttributes);
-}
-</script>
+<template @html="Image(src, alt)" webc:nokeep></template>
